update ER diagram and update swagger doc
