# controllers/books/book-user-detail.go
@@ -3,11 +3,18 @@ package books
 import (
 	"net/http"
 
+	"github.com/Pratchaya0/whitebook-golang-api/dtos/responses"
 	"github.com/Pratchaya0/whitebook-golang-api/entities"
 	"github.com/asaskevich/govalidator"
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Get a list of books in the the store
+// @Tag BookDetail
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /book-user-detail/create [post]
 func CreateBookUserDetail(c *gin.Context) {
 	var bookUserDetail entities.BookUserDetail
 	var book entities.Book
@@ -45,9 +52,21 @@ func CreateBookUserDetail(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, gin.H{"data": bookUserDetailCreate})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   bookUserDetailCreate,
+	}
+
+	c.JSON(http.StatusCreated, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookDetail
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /book-user-detail/{bookUserDetailId} [get]
 func GetBookUserDetail(c *gin.Context) {
 	bookUserDetailId := c.Param("bookUserDetailId")
 
@@ -58,9 +77,21 @@ func GetBookUserDetail(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": bookUserDetail})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   bookUserDetail,
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookDetail
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /book-user-details [get]
 func GetListBookUserDetails(c *gin.Context) {
 	var bookUserDetails []entities.BookUserDetail
 
@@ -69,9 +100,21 @@ func GetListBookUserDetails(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": bookUserDetails})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   bookUserDetails,
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookDetail
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /book-user-detail/update [post]
 func UpdateBookUserDetail(c *gin.Context) {
 	var bookUserDetail entities.BookUserDetail
 	var book entities.Book
@@ -109,9 +152,21 @@ func UpdateBookUserDetail(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": bookUserDetailUpdate})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   bookUserDetailUpdate,
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookDetail
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /book-user-detail/delete/{bookUserDetailId} [post]
 func DeleteBookUserDetail(c *gin.Context) {
 	bookUserDetailId := c.Param("bookUserDetailId")
 
@@ -120,5 +175,11 @@ func DeleteBookUserDetail(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": "book id: " + bookUserDetailId + " has been deleted"})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   gin.H{"message": "book id: " + bookUserDetailId + " has been deleted"},
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
