# controllers/carts/cart.go
@@ -3,11 +3,18 @@ package carts
 import (
 	"net/http"
 
+	"github.com/Pratchaya0/whitebook-golang-api/dtos/responses"
 	"github.com/Pratchaya0/whitebook-golang-api/entities"
 	"github.com/asaskevich/govalidator"
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Get a list of books in the the store
+// @Tag BookPreviewImages
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /cart/create [post]
 func CreateCart(c *gin.Context) {
 	var cart entities.Cart
 	var book entities.Book
@@ -44,9 +51,21 @@ func CreateCart(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, gin.H{"data": cartCreate})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   cartCreate,
+	}
+
+	c.JSON(http.StatusCreated, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookPreviewImages
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /cart/{cartId} [post]
 func GetCart(c *gin.Context) {
 	cartId := c.Param("cartId")
 
@@ -57,9 +76,21 @@ func GetCart(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": cart})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   cart,
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookPreviewImages
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /carts [post]
 func GetListCarts(c *gin.Context) {
 	var carts []entities.Cart
 
@@ -68,9 +99,21 @@ func GetListCarts(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": carts})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   carts,
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookPreviewImages
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /cart/update [patch]
 func UpdateCart(c *gin.Context) {
 	var cart entities.Cart
 
@@ -95,9 +138,21 @@ func UpdateCart(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": cart})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   cart,
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
 
+// @Summary Get a list of books in the the store
+// @Tag BookPreviewImages
+// @Security bearerToken
+// @Produce  json
+// @Success 200 {object} responses.Response{} "ok"
+// @Router /cart/delete/{cartId} [delete]
 func DeleteCart(c *gin.Context) {
 	cartId := c.Param("cartId")
 
@@ -106,5 +161,11 @@ func DeleteCart(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"data": "cart id: " + cartId + " has been deleted"})
+	webResponse := responses.Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   gin.H{"message": "cart id: " + cartId + " has been deleted"},
+	}
+
+	c.JSON(http.StatusOK, webResponse)
 }
